# HermiVersion_Multi_platform

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/assets/models/: BounceDetector.onnx  Court-Keypoint-FP16.tflite
androidApp/src/main/cpp/cpp/: CMakeLists.txt  native_bridge.cpp
androidApp/src/main/cpp/cpp/engine/: delegate_manager.cpp  delegate_manager.h  frame_pool.cpp  frame_pool.h  hermivision_pipeline.cpp  hermivision_pipeline.h  pipeline_builder.cpp  pipeline_builder.h  preprocessor.cpp  preprocessor.h  tracker.cpp  tracker.h  types.h
androidApp/src/main/cpp/cpp/engine/interfaces/: i_ai_model.h  i_delegate_manager.h
androidApp/src/main/cpp/cpp/models/: court_detector.cpp  court_detector.h  yolo_ball_detector.cpp  yolo_ball_detector.h
androidApp/src/main/java/com/hermitech/hermivision/: HermiVisionApp.kt  MainActivity.kt
androidApp/src/main/java/com/hermitech/hermivision/data/decoder/: VideoDecoder.kt
androidApp/src/main/java/com/hermitech/hermivision/data/inference/: DeviceProfiler.kt  ModelCache.kt  NativePipeline.kt
androidApp/src/main/java/com/hermitech/hermivision/data/worker/: VideoProcessingWorker.kt
androidApp/src/main/java/com/hermitech/hermivision/domain/camera/: CameraAnalyzer.kt
androidApp/src/main/java/com/hermitech/hermivision/ui/live/: LiveAnalysisScreen.kt  LiveViewModel.kt
androidApp/src/main/java/com/hermitech/hermivision/ui/live/components/: DetectionOverlays.kt  (+5 more)
androidApp/src/main/java/com/hermitech/hermivision/ui/optimizing/: OptimizingScreen.kt  OptimizingViewModel.kt
androidApp/src/main/java/com/hermitech/hermivision/ui/picker/: VideoPickerUI.kt
androidApp/src/main/java/com/hermitech/hermivision/ui/processing/: ProcessingScreen.kt  ProcessingViewModel.kt
androidApp/src/main/java/com/hermitech/hermivision/ui/results/: ResultsScreen.kt  ResultsViewModel.kt
androidApp/src/main/java/com/hermitech/hermivision/ui/theme/: Color.kt  Theme.kt  Type.kt
androidApp/src/main/res/values/: strings.xml  themes.xml
document-tasks/: court_logic_comparison.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: project.yml
iosApp/iosApp/: ContentView.swift  Info.plist  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Models/Court-Keypoint-FP32.mlpackage/: Manifest.json
iosApp/iosApp/Models/Court-Keypoint-FP32.mlpackage/Data/com.apple.CoreML/: model.mlmodel
iosApp/iosApp/Models/YoloBall-nano-FP32.mlpackage/: Manifest.json
iosApp/iosApp/Models/YoloBall-nano-FP32.mlpackage/Data/com.apple.CoreML/: model.mlmodel
iosApp/iosApp/camera/: AVFoundationCameraController.swift
iosApp/iosApp/inference/: IosInferencePipeline.swift
iosApp/iosApp/ui/live/: LiveAnalysisView.swift
iosApp/iosApp/ui/optimizing/: OptimizingView.swift
iosApp/iosApp/ui/picker/: VideoPickerView.swift
iosApp/iosApp/ui/processing/: ProcessingView.swift
iosApp/iosApp/ui/results/: ResultsView.swift
iosApp/iosApp/ui/theme/: DesignTokens.swift
logs/: log-build.txt  runtime-log.txt
shared/: build.gradle.kts
shared/src/androidMain/kotlin/com/hermitech/hermivision/data/: DatabaseDriverFactory.android.kt
shared/src/androidMain/kotlin/com/hermitech/hermivision/platform/: BackgroundTaskScheduler.android.kt  DeviceProfiler.android.kt
shared/src/commonMain/kotlin/com/hermitech/hermivision/data/: AppDatabaseFactory.kt  DatabaseDriverFactory.kt  DeviceConfigMappers.kt  ProcessingResultRepository.kt
shared/src/commonMain/kotlin/com/hermitech/hermivision/domain/court/: CourtDetectionManager.kt  CourtHomography.kt  CourtValidator.kt
shared/src/commonMain/kotlin/com/hermitech/hermivision/domain/decoder/: IVideoDecoder.kt  VideoMetadata.kt
shared/src/commonMain/kotlin/com/hermitech/hermivision/domain/inference/: AIConfig.kt  INativePipeline.kt
shared/src/commonMain/kotlin/com/hermitech/hermivision/domain/model/: DataModels.kt
shared/src/commonMain/kotlin/com/hermitech/hermivision/platform/: BackgroundTaskScheduler.kt  DeviceProfiler.kt
shared/src/commonMain/sqldelight/com/hermitech/hermivision/db/: DeviceConfig.sq
shared/src/iosMain/kotlin/com/hermitech/hermivision/data/: DatabaseDriverFactory.ios.kt
shared/src/iosMain/kotlin/com/hermitech/hermivision/platform/: BackgroundTaskScheduler.ios.kt  DeviceProfiler.ios.kt
tools/: export_court_coreml.py
